--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
                 <div class="col-lg-6 col-md-6">
                     <article>
                         <h1>Esse sou eu</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe in ipsa mollitia atque
-                            voluptate possimus minus delectus. Cumque officia mollitia excepturi earum tempora ab
-                            beatae
-                            in ipsam veniam, atque veritatis?</p>
+                        <p>Meu nome é Matheus Luyten Ruegg, sou recém formado em Administração de Empresas e 
+                            sou apaixonado por programação. Tenho experiência com
+                             linguagens de programação como Html , Css , Javascript e o CMS Wordpress.
+                              Meu objetivo è de me tornar o melhor programador front -end , 
+                            trabalhando com projetos inovadores em um espaço dinâmico de trabalho.</p>
                     </article>
                 </div>
 
@@ -98,21 +99,21 @@
     <div class="row d-flex justify-content-center align-items-center links">
         <div class="card col-lg-6 align-items-center">
             <span class="iconify" data-icon="mdi:linkedin-box" data-inline="false"></span>
-            <h2>Heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies
-                vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo
-                cursus magna.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <h2>Linkedin</h2>
+            <p>No linkedin você poderá encontrar mais informações sobre a minha formação e alguns 
+                    posts que compartilho sobre tecnologia e projetos de inovação.
+                    </p>
+            <p><a class="btn btn-secondary" href="https://br.linkedin.com/in/matheus-luyten-265b24bb" target="_blank" role="button">View details &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
 
         <div class="card col-lg-6 align-items-center">
                 <span class="iconify" data-icon="mdi:github-circle" data-inline="false"></span>
-            <h2>Heading</h2>
-            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras
-                mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <h2>GitHub</h2>
+            <p>
+                    No Github você poderá encontrar mais informações sobre projetos que venho programando e estudando.
+                    </p>
+            <p><a class="btn btn-secondary" href="https://github.com/matheusrgg" target="_blank" role="button">View details &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
 
@@ -123,10 +124,13 @@
     <section id="contact">
 
     </section>
-    <footer class="copyright py-4 text-center text-dark">
+    <footer class="copyright py-4 text-center ">
 
 
-        <h4>Copyright &copy; Your Website 2019</h4>
+        <h4>Copyright &copy; Matheus Ruegg 2019</h4>
+        <p>matheusrgg@yahoo.com</p>
+        <p>(11)994562702</p>
+        <p>Sao Paulo, SP</p>
 
 
     </footer>
