toques finais , cor do botao e link menu

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
             </button>
 
             <div class="collapse navbar-collapse row col-6" id="navbarSite">
-                <ul class="navbar-nav mr-auto">
+                <ul class="navbar-nav mr-auto ">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Perfil</a>
+                        <a class="nav-link" href="#banner">Perfil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quem Sou</a>
+                        <a class="nav-link" href="#about">Quem Sou</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contato</a>
+                        <a class="nav-link" href="#contact">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -93,7 +93,7 @@
 
 
 
-
+    <section id="contact">
 
     <!-- Three columns of text below the carousel -->
     <div class="row d-flex justify-content-center align-items-center links">
@@ -103,7 +103,7 @@
             <p>No linkedin você poderá encontrar mais informações sobre a minha formação e alguns 
                     posts que compartilho sobre tecnologia e projetos de inovação.
                     </p>
-            <p><a class="btn btn-secondary" href="https://br.linkedin.com/in/matheus-luyten-265b24bb" target="_blank" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="https://br.linkedin.com/in/matheus-luyten-265b24bb" target="_blank" role="button">Visitar &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
 
@@ -113,7 +113,7 @@
             <p>
                     No Github você poderá encontrar mais informações sobre projetos que venho programando e estudando.
                     </p>
-            <p><a class="btn btn-secondary" href="https://github.com/matheusrgg" target="_blank" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="https://github.com/matheusrgg" target="_blank" role="button">Visitar &raquo;</a></p>
         </div>
         <!-- /.col-lg-4 -->
 
@@ -121,9 +121,9 @@
 
 
 
-    <section id="contact">
+   
 
-    </section>
+   
     <footer class="copyright py-4 text-center ">
 
 
@@ -134,6 +134,7 @@
 
 
     </footer>
+</section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
