link contato menu fixed

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
     </section>
 
-    <footer class="copyright py-4 text-center ">
+    <footer class="copyright py-4 text-center" id="contact">
         <a href="https://github.com/matheusrgg" target="_blank"><span class="iconify" data-icon="mdi:github-circle" data-inline="false"></span></a>
         <a href="https://www.linkedin.com/in/matheusrgg"target="_blank"><span class="iconify" data-icon="mdi:linkedin-box" data-inline="false"></span></a>
         <h4>Copyright &copy; Matheus Ruegg 2019</h4>
